add_product_table
