# app/Http/Controllers/ProductController.php
@@ -4,23 +4,65 @@ namespace App\Http\Controllers;
 
 use App\Models\Product;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
 
 class ProductController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     *@OA\Get(
+    *path="/api/product",
+    *summary="Liste des Produits",
+    *@OA\Response(response="200",description="Liste des produits"),
+    *@OA\Response(response="400",description="Erreur lors du listing"),
+     * ),
      */
     public function index()
     {
-        //
+        $produits=Product::all();
+        $nbre=Product::count();
+        return response()->json([
+            'Nombre'=>$nbre,
+            'Produit'=>$produits
+        ]);
     }
 
     /**
-     * Show the form for creating a new resource.
+     * @OA\Post(
+     * path="/api/product",
+     * summary="Create a product",
+     * @OA\RequestBody(
+     *      required=true,
+     *      @OA\JsonContent(
+     *          required={"name","description","price"},
+     *          @OA\Property(property="name",type="string"),
+     *          @OA\Property(property="description",type="string"),
+     *          @OA\Property(property="price",type="number",format="float"),
+     * ),
+     * ),
+     * @OA\Response(response="200",description="Product add successfull"),
+     * @OA\Response(response="401",description="Failed add product")
+     * )
      */
-    public function create()
+
+    public function create(Request $request)
     {
-        //
+        $validator=Validator::make($request->all(),[
+        'name'=>'required|string',
+        'desciption'=>'required|string',
+        'price'=>'required|integer'
+        ]);
+
+        if($validator->fails())
+        {
+            return redirect('')->with('fail',$validator->errors());
+        }
+        $user=Product::create([
+            'name'=>$request->input('name'),
+            'description'=>$request->input('description'),
+            'price'=>$request->input('price')
+        ]);
+        return redirect('/')->with('success','Product add successfull');
+
     }
 
     /**
@@ -40,11 +82,23 @@ class ProductController extends Controller
     }
 
     /**
-     * Show the form for editing the specified resource.
+     * @OA\Put(
+     * path="/api/user/{id}",
+     * summary="Update user with id",
+     * @OA\Parameter(
+     * name="id",
+     * in="path",
+     * required=true,
+     * description="Update user with id",
+     * @OA\Schema(type="integer"),
+     * ),
+     * @OA\Response(response="200",description="User update successfull"),
+     * @OA\Response(response="401",description="Failed to update user"),
+     * )
      */
     public function edit(Product $product)
     {
-        //
+
     }
 
     /**
@@ -58,8 +112,29 @@ class ProductController extends Controller
     /**
      * Remove the specified resource from storage.
      */
-    public function destroy(Product $product)
+
+     /**
+      *@OA\Delete(
+        *path="/api/user/{id}",
+      *summary="Delete user with id",
+      *  @OA\Parameter(
+     * name="id",
+     * in="path",
+     * required=true,
+     * description="Update user with id",
+     * @OA\Schema(type="integer"),
+     * ),
+     * @OA\Response(response="200",description="User delete successfull"),
+     * @OA\Response(response="401",description="Failed to delete user"),
+      *),
+      */
+    public function destroy(Product $product,$id)
     {
-        //
+      $affected=Product::where('id',$id)->delete();
+      if($affected)
+      {
+        return redirect('/dashboard')->with('success','Suppression avec succes');
+      }
+      return back()->with('fail','Erreur lors de la suppression de l incident');
     }
 }
